<resources>
    <string name="app_name">SNap</string>
    <string name="passwordFormHint">パスワード</string>
    <string name="emailFormHint">メールアドレス</string>
    <string name="emailSignInButtonText">ログイン</string>
    <string name="emailCreateAccountButtonText">新規登録</string>
    <string name="SNap">snap</string>
    <string name="メールアドレス">mailaddress</string>
    <string name="mailAddress">メールアドレス</string>
    <string name="password">パスワード</string>
    <string name="login">ログイン</string>
    <string name="createaccount">新規登録</string>
    <string name="replybutten">返信</string>
    <string name="replyeditText">返信内容</string>
    <string name="snap">SNap</string>
    <string name="nameeditText">ユーザー名</string>
    <string name="ideditText">ユーザーID</string>
    <string name="dateeditText">年月日</string>
    <string name="posteditText">投稿内容</string>
    <string name="favoritebutten">いいね数</string>
    <string name="locationeditText">位置情報</string>
    <string name="dangerswitch">危険な情報</string>
    <string name="posttextBox">投稿内容</string>
    <string name="username">ユーザー名</string>
    <string name="userID">ユーザーID</string>
    <string name="comment">コメントする</string>
    <string name="location">現在地</string>
    <string name="post">投稿内容</string>
    <string name="favorite">0</string>
    <string name="Comment">コメント</string>
    <string name="DateTime">2020/11/6 12:00</string>
    <string name="search">キーワードを入力</string>
    <string name="applicatedButton">承認する</string>
    <string name="reject">拒否</string>
    <string name="DisclosureRange">公開範囲設定</string>
    <string name="theEntire">全体に公開</string>
    <string name="あ" />
    <string name="follower">フォローしているユーザーにのみ公開</string>
    <string name="anonymous">匿名投稿</string>
    <string name="notification">通知設定</string>
    <string name="followed">フォローされたとき通知</string>
    <string name="gooded">いいねされたとき通知</string>
    <string name="commented">コメントされたとき通知</string>
    <string name="touristSpot">近くの観光地を通知</string>
    <string name="createAccount">新規登録</string>
    <string name="nameTextEdit">ユーザー名</string>
    <string name="idTextEdit">ユーザーID</string>
    <string name="dateTextEdit">年月日</string>
    <string name="contentsTextEdit">投稿内容</string>
    <string name="favoriteTextEdit">いいね数</string>
    <string name="anonymousSwitch">匿名投稿　</string>
    <string name="dangerSwitch">危険な情報</string>
    <string name="textbox">投稿内容</string>
    <string name="photoFABContentDescription">写真選択</string>
    <string name="postFABContentDescription">投稿</string>
    <string name="approvalPending">承認待ち</string>
    <string name="followApplication">フォロー申請</string>
    <string name="title_activity_map">Map</string>
    <string name="approvalbutten">フォロー承認/申請</string>
    <string name="changeButten">変更</string>
    <string name="profileeditText">プロフィール表示欄</string>
    <string name="followButtonText"> フォロー</string>
    <string name="followerButtonText"> フォロワー</string>
    <string name="nameUpdate">名前</string>
    <string name="profileUpdate">プロフィール</string>
    <string name="saveText">保存</string>
    <string name="anoymous">匿名投稿</string>
    <string name="comma">, </string>
    <string name="latLng">%d, %d</string>
    <string name="backButtonText">←戻る</string>
    <string name="updateButtonText">更新</string>
    <string name="followRequestText">フォローリクエスト</string>
    <string name="notRegisterTextViwText">登録せずに使う</string>
    <string name="postButtonText">投稿する</string>
    <string name="cancel">取消</string>
    <string name="followRequestButtonText">フォロー申請</string>
    <string name="signOutButton">ログアウト</string>
    <string name="iconContentDescription">icon</string>
    <string name="sendEmailVerifiedButtonText">認証メールを再送信</string>
    <string name="backLoginButtonText">ログイン画面に戻る</string>
    <string name="settingText">設定</string>
    <string name="updateUserText">ユーザー情報変更</string>
    <string name="申請">applicatedFollow</string>
    <string name="applicatedFollow">申請</string>
    <string name="dialogMessage">フォローを解除しますか？</string>
    <string name="yesMessage">はい</string>
    <string name="noMessage">いいえ</string>
    <string name="updateAccountText">アカウント情報変更</string>
    <string name="changeEmailText">メールアドレス変更</string>
    <string name="changePasswordText">パスワード変更</string>
    <string name="checkPasswordHint">パスワード確認</string>

</resources>
