<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/userpicture"
        android:layout_width="59dp"
        android:layout_height="59dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

    <TextView
        android:id="@+id/userid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/ideditText"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        tools:layout_editor_absoluteX="150dp" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameeditText"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="22dp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateeditText"
        android:textSize="10sp"
        tools:layout_editor_absoluteX="335dp"
        tools:layout_editor_absoluteY="25dp" />

    <TextView
        android:id="@+id/postcontents"
        android:layout_width="410dp"
        android:layout_height="155dp"
        android:text="@string/posteditText"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="60dp" />

    <ImageView
        android:id="@+id/postpicture"
        android:layout_width="408dp"
        android:layout_height="218dp"
        app:srcCompat="@android:color/darker_gray"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="215dp" />

    <ImageView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_chat_bubble_24"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="449dp" />

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_favorite_24"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="449dp" />

    <TextView
        android:id="@+id/favoritequantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favoritebutten"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="450dp" />

    <ImageView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_location_on_24"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="450dp" />

    <TextView
        android:id="@+id/locationinfomation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationeditText"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="450dp" />
</androidx.constraintlayout.widget.ConstraintLayout>