<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.AuthActivity">

        <TextView
            android:id="@+id/snapTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/snap"
            android:textSize="50sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mailaddress"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="245dp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="330dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="104dp"
            android:layout_height="60dp"
            android:text="@string/login"
            tools:layout_editor_absoluteX="79dp"
            tools:layout_editor_absoluteY="468dp" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="100dp"
            android:layout_height="59dp"
            android:text="@string/createaccount"
            tools:layout_editor_absoluteX="224dp"
            tools:layout_editor_absoluteY="469dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
