<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/usrView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/usrName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="@+id/usrView"
        app:layout_constraintStart_toEndOf="@+id/usrView"
        app:layout_constraintTop_toTopOf="@+id/usrView" />

    <TextView
        android:id="@+id/usrId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/userID"
        app:layout_constraintBottom_toBottomOf="@+id/usrName"
        app:layout_constraintStart_toEndOf="@+id/usrName"
        app:layout_constraintTop_toTopOf="@+id/usrName" />

    <Button
        android:id="@+id/approvalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/applicatedButton"
        app:layout_constraintBottom_toBottomOf="@+id/usrId"
        app:layout_constraintStart_toEndOf="@+id/usrId"
        app:layout_constraintTop_toTopOf="@+id/usrId" />

    <Button
        android:id="@+id/rejectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/reject"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toBottomOf="@+id/approvalButton"
        app:layout_constraintStart_toEndOf="@+id/approvalButton"
        app:layout_constraintTop_toTopOf="@+id/approvalButton"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>