<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profire"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserActivity">

    <Button
        android:id="@+id/changebutton"
        android:layout_width="94dp"
        android:layout_height="40dp"
        android:text="@string/changeButten"
        android:textSize="8sp"
        tools:layout_editor_absoluteX="272dp"
        tools:layout_editor_absoluteY="114dp" />

    <Button
        android:id="@+id/approvalButton"
        android:layout_width="94dp"
        android:layout_height="40dp"
        android:text="@string/approvalbutten"
        android:textColor="#000000"
        android:textColorHint="#070707"
        android:textSize="8sp"
        tools:layout_editor_absoluteX="272dp"
        tools:layout_editor_absoluteY="78dp" />

    <FrameLayout
        android:id="@+id/contents_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_view">

    </FrameLayout>

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="88dp"
        android:layout_height="88dp"
        app:srcCompat="@drawable/ic_baseline_account_circle_24"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="74dp" />

    <LinearLayout
        android:id="@+id/footer_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></LinearLayout>

    <TextView
        android:id="@+id/ideditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idTextEdit"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="127dp" />

    <TextView
        android:id="@+id/nameeditText"
        android:layout_width="101dp"
        android:layout_height="34dp"
        android:text="@string/nameTextEdit"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="93dp" />

    <TextView
        android:id="@+id/profileeditText"
        android:layout_width="410dp"
        android:layout_height="87dp"
        android:text="@string/profileeditText"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="166dp" />

    <View
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="207dp"
        android:layout_height="50dp"
        android:text="@string/followButten"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="253dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="207dp"
        android:layout_height="50dp"
        android:text="@string/followerButten"
        tools:layout_editor_absoluteX="203dp"
        tools:layout_editor_absoluteY="253dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <ListView
        android:id="@+id/postList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="59dp"
        android:layout_marginTop="300dp"
        app:layout_constraintBottom_toBottomOf="@+id/footer_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
