<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.CommentActivity">

        <EditText
            android:id="@+id/posteditText"
            android:layout_width="344dp"
            android:layout_height="177dp"
            android:ems="10"
            android:hint="@string/replyeditText"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.189" />

        <Button
            android:id="@+id/replybutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="返信"
            tools:layout_editor_absoluteX="286dp"
            tools:layout_editor_absoluteY="50dp"
            tools:text="@string/replybutten" />

        <Switch
            android:id="@+id/anonymousswitch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anonymousSwitch"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="306dp" />

        <LinearLayout
            android:id="@+id/buttonLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/timelineImageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_recent_history"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/mapImageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_location_on_24"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/userImageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_account_circle_24"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>